# building-habits

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
habits/: CMakeLists.txt  bot.cpp  bot.hpp  http.cpp  http.hpp  moves.cpp  moves.hpp  moves_test.cpp  position.cpp  position.hpp  position_test.cpp  search.cpp  search.hpp  search_test.cpp
habits/testdata/: README.md
js/: .gitignore  CMakeLists.txt  README.md  package.json  rollup.config.js  tsconfig.json
js/src/: index.ts
src/: position.hpp  position_test.cpp
static/: .gitignore  index.html
